welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: Boolean does not take parameters
	if (aSmile() & bSmile() == true){
                  ^monkeyTrouble:4: error: Boolean does not take parameters
	} else if (aSmile() | bSmile() == false){
                         ^